# MoMo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  prompt.md  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: build-image.yml  ci.yml  release.yml
configs/: momo-config.example.yml  momo.yml
configs/wordlists/: README.md
deploy/: install.sh  install_dev.sh  install_minimum.sh  install_recommended.sh  momo-quickstart.sh  security_setup.sh  setup_systemd.sh
deploy/firstboot/: firstboot.service  firstboot.sh  momo-firstboot.service
deploy/helpers/: net_quiet.sh
deploy/image/: make_image.sh
deploy/image/stage-momo/: 00-run-chroot.sh  00-run.sh  01-packages  EXPORT_IMAGE  EXPORT_NOOBS  README.md  prerun.sh
deploy/image/stage-momo/00-install-momo/: 00-packages  01-run-chroot.sh
deploy/logrotate.d/: momo
deploy/systemd/: momo-ap.service  momo-global.service  momo-oled.service  momo-web.service  momo.service
docs/: ACTIVE_WIFI.md  AUTOPWN.md  BETTERCAP.md  CHANGELOG.md  CRACKING.md  CREDENTIALS.md  EVILGINX.md  FIRST_BOOT.md  HARDWARE.md  OPERATIONS.md  PLUGINS.md  PLUGINS_CREDITS.md  ROADMAP.md  SECURITY.md  TESTING_ENVIRONMENT.md  TEST_MAP.md  WEBUI.md  WIFI_ATTACKS.md  WPA3.md  investigate.md
ivirzivir/Project-Pwnag0dchi-main/: desktop.ini
logs/meta/: stats.json
momo/: __init__.py  _version.py  cli.py  config.py
momo/apps/: __init__.py
momo/apps/momo_core/: __init__.py  aggressive.py  bettercap.py  main.py
momo/apps/momo_oled/: __init__.py
momo/apps/momo_plugins/: IPDisplay.py  __init__.py  active_wifi.py  auto-tune.py  auto-update.py  auto_backup.py  autobackup.py  base.py  better_quickdic.py  bettercap.py  ble_scanner.py  bt-tether.py  cache.py  capture.py  cracker.py  creds_harvester.py  display-password.py  enable_assoc.py  enable_deauth.py  evil_twin.py  evilginx_aitm.py  example.py  example_plugin.py  exp.py  fix_services.py  gdrivesync.py  gpio_buttons.py  gps.py  gps_listener.py  grid.py  handshakes-dl.py  hashcat_cracker.py  instattack.py  internet-connection.py  karma_mana.py  logtail.py  memtemp-plus.py  memtemp.py  ohcapi.py  oled_status.py  (+16 more)
momo/apps/momo_web/: __init__.py  api.py  auth.py  ble_api.py  capability_api.py  capture_api.py  cracking_api.py  creds_api.py  evilginx_api.py  eviltwin_api.py  hardware_api.py  karma_api.py  management_api.py  pages.py  routes.py  sdr_api.py  server.py  sse.py  wardriver_api.py  wpa3_api.py
momo/apps/web/: __init__.py
momo/apps/web/static/: app.js  index.html  style.css
momo/core/: __init__.py  capability.py  events.py  plugin.py  security.py
momo/domain/: __init__.py  models.py
momo/firstboot/: __init__.py  config_generator.py  detector.py  entry.py  network.py  nexus.py  oled.py  server.py
momo/firstboot-ui/: .gitignore  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
momo/firstboot-ui/src/: App.tsx  index.css
momo/firstboot/static/: .gitkeep  index.html
momo/firstboot/templates/: dnsmasq.conf.j2  hostapd.conf.j2
momo/infrastructure/: __init__.py
momo/infrastructure/autopwn/: __init__.py  attack_chain.py  engine.py  session.py  target.py
momo/infrastructure/ble/: __init__.py  beacon_spoofer.py  gatt_explorer.py  hid_injector.py  scanner.py
momo/infrastructure/capture/: __init__.py  capture_manager.py
momo/infrastructure/cracking/: __init__.py  hashcat_manager.py  john_manager.py  wordlist_manager.py
momo/infrastructure/creds/: __init__.py  http_sniffer.py  kerberos.py  ldap_enum.py  manager.py  ntlm.py  responder.py
momo/infrastructure/database/: __init__.py  async_repository.py  repository.py  schema.py
momo/infrastructure/display/: __init__.py  default_menu.py  input_handler.py  menu.py  menu_controller.py  menu_screen.py  oled_display.py  screens.py
momo/infrastructure/evilginx/: __init__.py  evilginx_manager.py  phishlet_manager.py  session_manager.py
momo/infrastructure/eviltwin/: __init__.py  ap_manager.py  captive_portal.py
momo/infrastructure/gps/: __init__.py  distance.py  gpsd_client.py
momo/infrastructure/hardware/: __init__.py  device_registry.py  hardware_detector.py
momo/infrastructure/karma/: __init__.py  karma_attack.py  mana_attack.py  probe_monitor.py
momo/infrastructure/management/: __init__.py  network_manager.py
momo/infrastructure/nexus/: __init__.py  client.py  command_listener.py  offline_queue.py  sync.py
momo/infrastructure/sdr/: __init__.py  sdr_manager.py  signal_decoder.py  spectrum_analyzer.py
momo/infrastructure/wifi/: __init__.py  radio_manager.py  scanner.py
momo/infrastructure/wpa3/: __init__.py  wpa3_attack.py  wpa3_detector.py
momo/plugins/: __init__.py  ble_scanner.py  example_plugin.py  wifi_scanner.py
momo/tools/: handshakes_dl.py  iface_utils.py  pcap_utils.py  storage_manager.py  supervisor.py  upgrade_plugins.py
scripts/: momo-ap.sh  momo-firstboot  momo-firstboot.service
tests/: test_bettercap_args.py  test_cli.py  test_config.py  test_core.py  test_oled_softfail.py  test_plugins.py  test_plugins_config.py  test_rotate_now.py  test_storage_manager.py  test_supervisor.py
tests/e2e/: test_full_dryrun.py  test_metrics_plugins.py  test_smoke.py  test_web_bind.py  test_web_ui.py
tests/integration/: test_ble_chain.py  test_capture_to_crack.py  test_plugin_integration.py
tests/security/: test_security.py
tests/unit/: test_active_wifi.py  test_async_repository.py  test_autopwn.py  test_ble_expansion.py  test_ble_scanner.py  test_capability.py  test_capture_manager.py  test_capture_repository.py  test_config_resolve.py  test_cracking.py  test_creds.py  test_display.py  test_distance_tracker.py  test_evilginx.py  test_eviltwin.py  test_firstboot.py  test_hardware_detector.py  test_john_manager.py  test_karma_mana.py  test_management_network.py  test_menu_system.py  test_nexus_commands.py  test_plugin_system.py  test_plugins_autoload.py  test_radio_manager.py  test_sdr.py  test_token_resolver.py  test_wardriver_plugin.py  test_web_api.py  test_webcfg_plugin.py  test_wpa3.py  test_wpasec_plugin.py
(+8 files in other folders)
