[build-system]
requires = ["hatchling>=1.25.0", "hatch-vcs>=0.3"]
build-backend = "hatchling.build"

[project]
name = "momo"
dynamic = ["version"]
description = "MoMo: Modular, Pi 5 optimized, secure fork of Pwnagotchi"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "MoMo Maintainers" }
]
keywords = ["pwnagotchi", "raspberry-pi", "wifi", "security", "hcxdumptool"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Environment :: Console",
  "Typing :: Typed",
]
dependencies = [
  "typer>=0.12",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "rich>=13.7",
  "psutil>=5.9",
  "Flask>=3.0.0",
  "Flask-Limiter>=3.6.0",
  "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
recommended = [
  "luma.oled>=3.13",
]
wardriving = [
  "aiosqlite>=0.19.0",   # Async SQLite (ZORUNLU)
  "pynmea2>=1.19.0",     # NMEA parsing fallback
  "aiofiles>=23.2.0",    # Async file I/O
]
ble = [
  "bleak>=0.22.0",       # BLE scanner library
]
eviltwin = [
  "aiohttp>=3.9.0",      # Captive portal server
]
firstboot = [
  "fastapi>=0.115.0",    # Wizard web server
  "uvicorn>=0.30.0",     # ASGI server
  "aiohttp>=3.9.0",      # Nexus discovery
  "zeroconf>=0.131.0",   # mDNS discovery
]
dev = [
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "pytest-asyncio>=0.23.0",  # Async test desteği
  "pre-commit>=3.7.0",
  "types-PyYAML>=6.0.12",
  "types-psutil>=5.9.5",
  "toml>=0.10,<1.0",
]

[project.scripts]
momo = "momo.cli:launch"
momo-firstboot = "momo.firstboot.entry:cli_main"
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "momo/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["momo"]


[tool.ruff]
line-length = 120
target-version = "py311"
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "PL", "RUF"]
ignore = ["E501", "PLR2004", "B008"]

[tool.ruff.lint.per-file-ignores]
# Treat the drop-in plugin directory as vendor-like; ignore noisy rules there.
"momo/apps/momo_plugins/*.py" = [
  "E402", "F401", "F403", "F405", "F821", "E701", "E722",
  "PLR0912", "PLR0915", "UP031", "RUF012", "B019", "E741",
  "PLW0602", "PLW0603", "PLR0911", "PLC0206", "PLW2901", "B015",
  "PLC0415",  # Allow lazy imports in plugins (circular import avoidance)
  "RUF059",   # Unused unpacked variables (legacy plugins)
  "RUF005",   # List concatenation (legacy plugins)
  "RUF006",   # asyncio.create_task without reference
  "F841"      # Unused variables (legacy plugins)
]
# Infrastructure modules may use lazy imports and complex capture logic
"momo/infrastructure/**/*.py" = ["PLC0415", "PLR0912", "PLR0913", "PLR0915", "PLR0911", "RUF006"]
# Domain models may have inline math import
"momo/domain/models.py" = ["PLC0415"]
# Config may use lazy imports for validators
"momo/config.py" = ["PLC0415"]
# Allow lazy imports in new plugin system
"momo/plugins/*.py" = ["PLC0415"]
# Allow a helper to accept many arguments for clarity
"momo/tools/pcap_utils.py" = ["PLR0913"]
# Web modules may use lazy imports for plugin access and global state
"momo/apps/momo_web/*.py" = ["PLC0415", "PLW0603"]
# Tests: allow common test patterns, local imports, mock data with tabs, and import order
"tests/**/*.py" = ["F401", "PLC0415", "E101", "W191", "I001"]
"momo/apps/momo_core/aggressive.py" = ["PLR0913", "PLR0911"]
"momo/apps/momo_core/main.py" = ["PLR0912", "PLR0915", "PLC0415"]
"momo/apps/momo_oled/*.py" = ["PLC0415"]
"momo/apps/momo_web/sse.py" = ["PLW0603"]
"momo/apps/momo_web/wardriver_api.py" = ["PLR0912", "F841"]
"momo/apps/web/__init__.py" = ["F401"]
"momo/cli.py" = ["PLR0915", "PLC0415", "PLR0912"]
"momo/core/events.py" = ["PLC0415", "PLW0603"]
"momo/core/security.py" = ["B905"]
# Plugin system: lifecycle hooks are optional (not abstract), RUF006 for fire-and-forget tasks, lazy imports for circular avoidance
"momo/core/plugin.py" = ["B027", "RUF006", "PLC0415"]
"momo/infrastructure/wifi/__init__.py" = ["RUF022"]
# Hardware registry uses class-level device lists (intentional mutable defaults)
"momo/infrastructure/hardware/device_registry.py" = ["RUF012"]
# Display screens use Unicode icons (intentional)
"momo/infrastructure/display/screens.py" = ["RUF001"]
# Management network has loop variable reassignment (safe pattern)
"momo/infrastructure/management/network_manager.py" = ["PLW2901"]
"momo/infrastructure/wifi/radio_manager.py" = ["PLW2901", "F841"]
"momo/infrastructure/wifi/scanner.py" = ["PLW2901"]
# WPA3 module: allow complexity for attack logic
"momo/infrastructure/wpa3/*.py" = ["PLR0912", "PLR0913", "PLR0915", "PLC0415"]
# Auto-generated by setuptools-scm - ignore all rules
"momo/_version.py" = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["momo"]
combine-as-imports = true

[tool.mypy]
python_version = "3.11"
# strict = true  # Disabled for now - too many legacy issues
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false
# disallow_untyped_defs = true  # Disabled - legacy plugins
# disallow_any_generics = true  # Disabled - dict/list without params
no_implicit_optional = true
show_error_codes = true
pretty = true
explicit_package_bases = true
# Relaxed settings for migration
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_calls = false
exclude = [
  "migrations",
  # Web modules - duplicate module resolution issue
  "momo/apps/web/",
  "momo/apps/momo_web/",
  # ALL legacy plugins - will be rewritten in MoMo style
  "momo/apps/momo_plugins/",
  # OLED module - requires PIL/luma hardware libs
  "momo/apps/momo_oled/",
  # Build artifacts
  "build/",
  "dist/",
  # Version file (auto-generated)
  "_version\\.py",
]

[[tool.mypy.overrides]]
module = [
  "pwnagotchi.*",
  "smbus",
  "luma.*",
  "gps",
  "bleak",
  "pydrive2.*",
  "requests",
  "dateutil.*",
  "scapy.*",
  "aiohttp",
  "httpx",
  "PIL",
  "PIL.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra -q --strict-markers"
pythonpath = [
  "."
]
testpaths = [
  "tests"
]
markers = [
  "e2e: end-to-end tests"
]


